<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NUMAD13-ReubenJacobs</string>
    <string name="main_name">Reuben Jacobs</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">About</string>
    <string name="gError">Generate Error</string>
    <string name="sudoku">Sudoku</string>
    <string name="about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="quit">Quit</string>
    <string name="dictionary">Dictionary</string>
    <string name="clear">Clear</string>
    <string name="main_title">Android Sudoku</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="settings_label">Settings&#8230;</string>
    <string name="settings_title">Sudoku settings</string>
    <string name="settings_shortcut">s</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play background music</string>
    <string name="hints_title">Hints</string>
    <string name="hints_summary">Show hints during play</string>
    <string name="new_game_title">Difficulty</string>
    <string name="easy_label">Easy</string>
    <string name="medium_label">Medium</string>
    <string name="hard_label">Hard</string>
    <string name="game_title">Game</string>
    <string name="no_moves_label">No moves</string>
    <string name="keypad_title">Keypad</string>
    <string name="about_title">About Android Sudoku</string>
    <string name="rMenu">Return to Menu</string>
    <string name="about_text">\
Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.</string>
    <string name="title_activity_dictionary_actvity">Test Dictionary</string>
    <string name="title_activity_dictionary">Test Dictionary</string>
    <string name="aknow">Acknowledgements</string>
    <string name="title_activity_aknowledgements">Acknowledgements</string>
    <string name="aknowledge">All images/icons/graphics belong to me or were provided in this course. I did not refer to anyone personally when creating this assignment however, I referred to StackOverflow a large amount (including learning about making .txt a .jet). Links are below.</string>
    <string name="akLinks">http://stackoverflow.com/questions/12728255/android-set-margin-programmatically-in-dp-on-button, http://stackoverflow.com/questions/6465680/how-to-determine-the-screen-width-in-terms-of-dp-or-dip-at-runtime-in-android, http://stackoverflow.com/questions/14684318/setmargin-does-not-works-in-relative-layout-in-android, http://stackoverflow.com/questions/8026204/how-to-write-to-and-read-from-a-text-file-in-android, http://stackoverflow.com/questions/9120003/where-to-put-text-files-in-directory-in-android, http://stackoverflow.com/questions/15260156/how-to-read-a-text-file-txt-and-set-the-words-inside-in-string-variables-on-a, http://stackoverflow.com/questions/6242661/enter-data-in-edittext-and-respond-without-pressing-enter/6242778#6242778, http://stackoverflow.com/questions/6462105/how-do-i-access-androids-default-beep-sound</string>
    <string name="title_activity_acknowledgements">Acknowledgements</string>
    <string name="title_activity_dabble">Dabble</string>
    <string name="title_activity_welcome_dabble">Welcome to Dabble</string>
    <string name="solve">Hint</string>
    <string name="title_activity_pause_dabble">Pause</string>
    <string name="pause_dabble">You have paused the game, go back or click the resume button to return</string>
    <string name="title_activity_dabble_acknow">Acknowledgments</string>
    <string name="dabbleLinks1">http://www.mkyong.com/android/android-gridview-example/</string>
    <string name="dabbleLinks2">http://stackoverflow.com/questions/4148670/activity-oncreate-called-when-phone-goes-to-sleep</string>
    <string name="dabbleLinks3">http://stackoverflow.com/questions/3765161/updating-ui-with-runnable-postdelayed-not-working-with-timer-app</string>
    <string name="dabbleLinks4">http://stackoverflow.com/questions/7928803/background-music-android</string>
    <string name="dabbleLinks5">http://developer.android.com/reference/android/widget/ArrayAdapter.html</string>
    <string name="dabbleLinks6">http://stackoverflow.com/questions/12692179/set-certain-item-in-gridview-not-clickable</string>
    <string name="dabbleLinks7">http://developer.android.com/reference/android/util/SparseArray.html</string>
    <string name="dabbleLinks8">http://stackoverflow.com/questions/2115758/how-to-display-alert-dialog-in-android</string>
    <string name="introDabble">To begin press New Game. Try to move the letters around to create 3, 4, 5, and 6 letter words. If you found a word the radio button next to the corresponding row will light up.</string>
    <string name="dabbleMusic">Music loop taken from http://www.uniquetracks.com/Free-Music-Loops.html</string>
    <string name="title_activity_dabble_comm">DabbleComm</string>
    <string name="title_activity_welcome_comm">WelcomeComm</string>
    <string name="title_activity_comm_playerlist">CommPlayerlist</string>
    <string name="title_activity_comm_game">CommGame</string>
    <string name="title_activity_comm_acknow">CommAcknow</string>
    <string name="title_activity_two_player_dabble_welcome">TwoPlayerDabbleWelcome</string>
    <string name="title_activity_two_player_dabble_home">TwoPlayerDabbleHome</string>
    <string name="title_activity_two_player_dabble_game">TwoPlayerDabbleGame</string>

</resources>